--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="e.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    
 </head>
 <body>
   <div id="header-container">
@@ -13,14 +15,18 @@
   <div id="clicker-container">
       <p>Score: <span id="score">0</span></p>
       <p id="1Title">Title: First Steps</p>
-      <div id="cookie-container">
-          <img id="cookie" src="cookie.png">
-      </div>
+      <div id="cookie-container" style="text-align: center;">
+        <img id="cookie" src="cookie.png">
+</div>
       </div>
   </div>
+
+
+
+  
+
+
 </body>
-
-
 
 <script>
 var score = 0;
